# py-distillation

./: LICENSE  README.md  pyproject.toml  setup.cfg
.ipynb_checkpoints/: McCabeTheile-checkpoint.ipynb  PonchonSavarit-checkpoint.ipynb
pydistillation/: __init__.py
pydistillation/pydistillation.egg-info/: PKG-INFO  SOURCES.txt
src/: McCabeTheile.py  PonchonSawarit.py
src/py_distillation.egg-info/: PKG-INFO  SOURCES.txt
