[metadata]
name = pydistillation
version = 1.0.0
author = Dara Samii
author_email = darasamii@outlook.com
description = packge for solving distillation problems with Pochon Sawarit and McCabe-Theile methods
long_descripton = file: README.md 
long_descripton_content_type = text/markdown
url = https://github.com/darasamii/py_distillation
clasifiers = 
    Programming Language :: Python ::3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir = 
        = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src